# michel-bot

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
crates/api/: Cargo.toml
crates/api/src/: commands.rs  config.rs  lib.rs  webhook.rs
crates/api/src/commands/: commands.pest  parser.rs
crates/crypto-store/: Cargo.toml
crates/crypto-store/src/: lib.rs
crates/db/: Cargo.toml
crates/db/migrations/: 20260211104540_create_issue_events.sql
crates/db/src/: lib.rs
crates/matrix/: Cargo.toml
crates/matrix/src/: lib.rs
crates/michel-bot/: Cargo.toml
crates/michel-bot/src/: main.rs
crates/michel-bot/tests/bdd/: world.rs
crates/michel-bot/tests/bdd/steps/: mod.rs  seerr_issues.rs
crates/michel-bot/tests/features/: seerr_issues.feature
crates/seerr/: Cargo.toml
crates/seerr/src/: lib.rs  payload.rs
src/: commands.rs  config.rs  db.rs  main.rs  seerr.rs  seerr_client.rs  webhook.rs
tests/bdd/: main.rs  world.rs
tests/bdd/steps/: seerr_issues.rs
