[workspace]
resolver = "2"
members = [
    "crates/matrix",
    "crates/seerr",
    "crates/db",
    "crates/api",
    "crates/michel-bot",
    "crates/crypto-store",
]

[workspace.package]
version = "0.2.0"
edition = "2024"

[workspace.dependencies]
# Internal crates
michel-matrix = { path = "crates/matrix" }
michel-seerr = { path = "crates/seerr" }
michel-db = { path = "crates/db" }
michel-api = { path = "crates/api" }
michel-crypto-store = { path = "crates/crypto-store" }

# External dependencies
matrix-sdk = { version = "0.16", features = ["e2e-encryption"] }
matrix-sdk-crypto = "0.16"
matrix-sdk-common = "0.16"
async-trait = "0.1"
thiserror = "2"
vodozemac = "0.8"
ruma = "0.14"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }

# Test dependencies
cucumber = { version = "0.22", features = ["libtest"] }
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["postgres"] }
hmac = "0.12"
sha1 = "0.10"
hex = "0.4"
wiremock = "0.6"
awaitility = "0.4"
