[workspace]
resolver = "2"
members = [
    "crates/matrix",
    "crates/seerr",
    "crates/db",
    "crates/api",
    "crates/michel-bot",
]

[workspace.package]
version = "0.2.0"
edition = "2024"

[workspace.dependencies]
# Internal crates
michel-matrix = { path = "crates/matrix" }
michel-seerr = { path = "crates/seerr" }
michel-db = { path = "crates/db" }
michel-api = { path = "crates/api" }

# External dependencies
matrix-sdk = {version = "0.16.0", default-features = false, features = ["rustls-tls"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "migrate", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
reqwest = { version = "0.13", features = ["json"] }

# Test dependencies
cucumber = { version = "0.22", features = ["libtest"] }
testcontainers = "0.27"
testcontainers-modules = { version = "0.14", features = ["postgres"] }
hmac = "0.12"
sha1 = "0.10"
hex = "0.4"
wiremock = "0.6"
awaitility = "0.4"
