[package]
name = "michel-crypto-store"
version.workspace = true
edition.workspace = true

[dependencies]
matrix-sdk-crypto.workspace = true
matrix-sdk-common.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
vodozemac.workspace = true
ruma.workspace = true
